K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
      - name: backend1
        image: mitya178/mtstask_backend1:v10
        ports:
        - containerPort: 5051

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
      - name: backend2
        image: mitya178/mtstask_backend2:v10
        ports:
        - containerPort: 5052

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mitya178/mtstask_frontend:v18
        ports:
        - containerPort: 5050


---

apiVersion: v1
kind: Service
metadata:
  name: backend1-service
spec:
  selector:
    app: backend1
  ports:
    - protocol: TCP
      port: 5051
      targetPort: 5051

---

apiVersion: v1
kind: Service
metadata:
  name: backend2-service
spec:
  selector:
    app: backend2
  ports:
    - protocol: TCP
      port: 5052
      targetPort: 5052

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mtstask.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5050
